--- a/content/presentation.html
+++ b/content/presentation.html
@@ -52,7 +52,7 @@
     | [OGC API - Features - Part 3: Filtering and the Common Query Language (CQL)](https://docs.ogc.org/is/19-079r2/19-079r2.html)  | draft      |
     | [OGC API - Features - Part 4: Create, Replace, Update and Delete](https://docs.ogc.org/DRAFTS/20-002r1.html)                  | draft      |
     | [OGC API - Coverages - Part 1: Core](https://docs.ogc.org/DRAFTS/19-087.html)                                                 | draft      |
-    | [OGC API - Maps - Part 1: Core](https://docs.ogc.org/is/20-058/20-058.html)                                                   | draft      |
+    | [OGC API - Maps - Part 1: Core](https://docs.ogc.org/is/20-058/20-058.html)                                                   | 1.0        |
     | [OGC API - Records - Part 1: Core](https://docs.ogc.org/is/20-004r1/20-004r1.html)                                            | draft      |
     | [OGC API - Processes - Part 1: Core](https://docs.ogc.org/is/18-062r2/18-062r2.html)                                          | 1.0        |
     | [OGC API - Environmental Data Retrieval - Part 1: Core](https://docs.ogc.org/is/19-086r6/19-086r6.html)                       | draft      |
