--- a/content/presentation.html
+++ b/content/presentation.html
@@ -20,7 +20,8 @@
 </section>
 
 
-<section data-markdown style="font-size: 0.45em;">
+<section data-markdown style="font-size: 0.45em;" data-background="images/ogc-logo.png" data-background-opacity="0.1" 
+         data-background-size="15%">
     | Standard                                                                 | Version(s)                  |
     |--------------------------------------------------------------------------|-----------------------------|
     | [OGC WMS](https://www.opengeospatial.org/standards/wms)                  | 1.1.1, 1.3.0                |
@@ -45,7 +46,8 @@
     | [OpenSearch](https://github.com/dewitt/opensearch)                       | 1.1                         |
 </section>
 
-<section data-markdown style="font-size: 0.6em;">
+<section data-markdown style="font-size: 0.6em;" data-background="images/ogc-logo.png" data-background-opacity="0.1"
+         data-background-size="15%">
     | Standard                                                                                                                      | Version(s) |
     |-------------------------------------------------------------------------------------------------------------------------------|------------|
     | [OGC API - Features - Part 1: Core](https://docs.ogc.org/is/17-069r4/17-069r4.html)                                           | 1.0        |
@@ -53,11 +55,42 @@
     | [OGC API - Features - Part 4: Create, Replace, Update and Delete](https://docs.ogc.org/DRAFTS/20-002r1.html)                  | draft      |
     | [OGC API - Coverages - Part 1: Core](https://docs.ogc.org/DRAFTS/19-087.html)                                                 | draft      |
     | [OGC API - Maps - Part 1: Core](https://docs.ogc.org/is/20-058/20-058.html)                                                   | 1.0        |
-    | [OGC API - Records - Part 1: Core](https://docs.ogc.org/is/20-004r1/20-004r1.html)                                            | draft      |
+    | [OGC API - Records - Part 1: Core](https://docs.ogc.org/is/20-004r1/20-004r1.html)                                            | 1.0        |
     | [OGC API - Processes - Part 1: Core](https://docs.ogc.org/is/18-062r2/18-062r2.html)                                          | 1.0        |
-    | [OGC API - Environmental Data Retrieval - Part 1: Core](https://docs.ogc.org/is/19-086r6/19-086r6.html)                       | draft      |
+    | [OGC API - Environmental Data Retrieval - Part 1: Core](https://docs.ogc.org/is/19-086r6/19-086r6.html)                       | 1.0, 1.1   |
     | [OGC API - Connected Systems - Part 1: Feature Resources](https://docs.ogc.org/DRAFTS/23-001r0.html)                          | draft      |
     | [OGC API - Connected Systems - Part 2: Dynamic Data](https://docs.ogc.org/DRAFTS/23-002r0.html)                               | draft      |
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+        #### A Brief History
+
+        + **2006** Project started by [Sean Gillies](https://sgillies.net/2006/08/04/ws-client-library-for-python.html)
+        + **2009** added [CSW support](https://github.com/geopython/OWSLib/commit/59acbb4a1fcba533fb4392215d94353d81fbf748)
+        + **2012** [WPS](https://github.com/geopython/OWSLib/commit/286849bd41f873dbce6d61d6a3512a6729e41118)
+        and [WMTS](https://github.com/geopython/OWSLib/pull/42) support
+        + **2015** [Python3 support](https://github.com/geopython/OWSLib/pull/236)
+        + **2020** onwards OGC API support led by [Tom Kralidis](https://www.kralidis.ca/blog/2021/01/01/bye-bye-2020/)
+
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+        From [Open Hub](https://openhub.net/p/OWSLib)
+
+        + 2,348 commits made by **165** contributors
+        + representing **167,906** lines of code
+        + an estimated **43 years of effort** (COCOMO model)
+        + first commit in **April, 2007**
+
+        <hr />
+
+        + Downloaded **4.93** million times[¹](https://pepy.tech/projects/owslib)
+        + Over **150,000** times in the last month[²](https://pypistats.org/packages/owslib)
+        + Part of the QGIS installation
+    </script>
 </section>
 
 <section data-markdown>
@@ -86,30 +119,13 @@
     </script>
 </section>
 
-
-<section data-markdown>
-    <script type="text/template">
-        From [Open Hub](https://openhub.net/p/OWSLib)
-
-        + 2,348 commits made by **165** contributors
-        + representing **167,906** lines of code
-        + an estimated **43 years of effort** (COCOMO model)
-        + first commit in **April, 2007**
-
-        <hr />
-
-        + Downloaded **4.93** million times[¹](https://pepy.tech/projects/owslib)
-        + Over **150,000** times in the last month[²](https://pypistats.org/packages/owslib)
-    </script>
-</section>
-
 <section data-markdown>
     <script type="text/template">
         ### Thanks for Listening!
 
         + [OWSLib Homepage](https://owslib.readthedocs.io/)
         + [PyPI](https://pypi.org/project/OWSLib/)
-
+        + [Users Mailing List](https://lists.osgeo.org/mailman/listinfo/owslib-users)
         <br />
         <img class="plain" src="images/geopython_logo.png" style="background: none;" />
         <br />
