Add sponsor logo

--- a/content/presentation.html
+++ b/content/presentation.html
@@ -1,13 +1,15 @@
 <section data-markdown>
     <script type="text/template">
-        <!--<img class="plain" src="images/logo-osgeo.svg" style="background: none;" />-->
-        <img class="plain" src="images/geopython_logo.png" style="background: none;" />
+        <img class="plain" src="images/geopython_logo.png" style="background: none; width: 10%;" />
 
         ## State of OWSLib 2025
 
-        #### by Seth Girvin and the OWSLib Team
+        #### by Seth Girvin
 
-        <img src="images/foss4g.png" style="width: 40%; border-color: black; border-width: thin; border-style: solid;" />
+        <a href="https://compass.ie"><img class="plain" src="images/compass-logo.png" style="background: none; width: 50%;" /></a>
+        <br />
+        ##### and the OWSLib Team
+        <img src="images/foss4g.png" style="width: 20%; border-color: black; border-width: thin; border-style: solid;" />
     </script>
 </section>
 
@@ -126,12 +128,9 @@
         + [PyPI](https://pypi.org/project/OWSLib/)
         + [Users Mailing List](https://lists.osgeo.org/mailman/listinfo/owslib-users)
         <br />
-        <img class="plain" src="images/geopython_logo.png" style="background: none;" />
+        <img class="plain" src="images/geopython_logo.png" style="background: none; width: 50%;" />
         <br />
-        <a href="https://mastodon.social/@geographika" style="text-decoration: none;">
-            <img src="images/mastodon.png" alt="Mastodon Icon" style="width: 30px; vertical-align: middle;">
-            <span style="vertical-align: middle; font-size: 0.5em;">@geographika</span>
-        </a>
 
+        <a href="https://compass.ie"><img class="plain" src="images/compass-logo.png" style="background: none; width: 50%;" /></a>
     </script>
 </section>
