Fix install and add notebook

--- a/content/presentation.html
+++ b/content/presentation.html
@@ -104,7 +104,7 @@
         ```
 
         ```bash
-        git conda install -c conda-forge owslib
+        conda install -c conda-forge owslib
         ```
 
         ```bash
@@ -114,8 +114,9 @@
     </textarea>
 </section>
 
-<section data-markdown data-background="images/owslib-notebook.png" data-background-opacity="0.8" data-background-size="55%">
+<section data-markdown data-background="images/geopython-notebook" data-background-opacity="0.8" data-background-size="55%">
     <script type="text/template">
+        ### [Doing Geospatial in Python](https://geopython.github.io/geopython-workshop/)
         ### [OSGeoLive Notebooks](https://live.osgeo.org)
     </script>
 </section>
