Add summary slide

--- a/content/presentation.html
+++ b/content/presentation.html
@@ -152,12 +152,21 @@ with open("output.png", "wb") as fh:
     </textarea>
 </section>
 
-
-
 <section data-markdown data-background="images/geopython-notebook.png" data-background-opacity="0.8" data-background-size="55%">
     <script type="text/template">
         ### [Doing Geospatial in Python](https://geopython.github.io/geopython-workshop/)
         ### [OSGeoLive Notebooks](https://live.osgeo.org)
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+        # Summary
+
+        - OWSLib is alive and well!
+        - New OGC APIs are supported
+        - Try it for your Python workflows
+
     </script>
 </section>
 
